Fix concurrency, update tests