@@ -46,31 +46,34 @@ class WavePatternStoreConcurrencyTest {
     }
 
     @Test
+    @Timeout(value = 120)
     void smokeConcurrentReadWrite() throws Exception {
 
         ExecutorService pool = Executors.newFixedThreadPool(THREADS);
         CountDownLatch startSignal = new CountDownLatch(1);
-        ConcurrentMap<String,WavePattern> finalRevision = new ConcurrentHashMap<>();
+        ConcurrentMap<String, WavePattern> finalRevision = new ConcurrentHashMap<>();
+        ConcurrentMap<String, WavePattern> initialRevision = new ConcurrentHashMap<>();
 
         class Worker implements Runnable {
-            @Override public void run() {
+            @Override
+            public void run() {
                 try {
                     startSignal.await();
                     for (int i = 0; i < OPS_PER_THREAD; i++) {
-                        WavePattern initial = WavePatternTestUtils.createConstantPattern(Math.random(), Math.random(),
-                                64);
+                        WavePattern initial = WavePatternTestUtils.createConstantPattern(Math.random(), Math.random(), 1024);
                         final String id;
                         try {
                             id = store.insert(initial, Map.of());
                         } catch (DuplicatePatternException ex) {
                             continue;
                         }
-                        WavePattern updated = WavePatternTestUtils.createConstantPattern(Math.random(), Math.random(),
-                                64);
+                        initialRevision.put(id, initial);
+                        WavePattern updated = WavePatternTestUtils.createConstantPattern(Math.random(), Math.random(), 1024);
                         store.update(id, updated, Map.of());
                         finalRevision.put(id, updated);
+
                         Assertions.assertFalse(store.query(updated, 1).isEmpty(),
-                                "freshly updated pattern must be searchable");
+                                "Freshly updated pattern must be searchable");
                     }
                 } catch (Throwable t) {
                     throw new AssertionError("Worker failed", t);
@@ -82,17 +85,33 @@ class WavePatternStoreConcurrencyTest {
         startSignal.countDown();
         pool.shutdown();
         Assertions.assertTrue(pool.awaitTermination(90, TimeUnit.SECONDS),
-                "threads did not finish in time");
+                "Threads did not finish in time");
 
-        for (Map.Entry<String,WavePattern> e : finalRevision.entrySet()) {
+        for (Map.Entry<String, WavePattern> e : finalRevision.entrySet()) {
             WavePattern pat = e.getValue();
             List<ResonanceMatch> hits = store.query(pat, 1);
-            Assertions.assertFalse(hits.isEmpty(), "pattern not found after concurrent ops");
-            ResonanceMatch top = hits.get(0);
+            Assertions.assertFalse(hits.isEmpty(), "Pattern not found after concurrent ops");
+            ResonanceMatch top = hits.getFirst();
             float energy = store.compare(pat, top.pattern());
             Assertions.assertTrue(energy >= 0.99f,
-                    "pattern match is not exact (energy=" + energy + ')');
+                    "Pattern match is not exact (energy=" + energy + ')');
+        }
 
+        for (Map.Entry<String, WavePattern> e : initialRevision.entrySet()) {
+            String id = e.getKey();
+            WavePattern old = e.getValue();
+            List<ResonanceMatch> hits = store.query(old, 1);
+            if (hits.isEmpty()) continue;
+
+            ResonanceMatch top = hits.getFirst();
+            if (top.id().equals(id)) {
+                float energy = store.compare(old, top.pattern());
+                System.out.println("ID=" + id + " similarity(old→updated) = " + energy);
+            } else {
+                float energy = store.compare(old, top.pattern());
+                System.out.printf("Unrelated pattern matched strongly (old ID=%s, matched ID=%s, energy=%.6f)%n",
+                        id, top.id(), energy);
+            }
         }
     }
 }
